test.output
Nonterminals useless in grammar

   PARAMETER_LIST
   PARAMETER
   EXPR11


Terminals unused in grammar

   T_TYPEDEF
   T_EXTERN
   T_STATIC
   T_REGISTER
   T_AUTO
   T_CHAR
   T_SHORT
   T_LONG
   T_FLOAT
   T_DOUBLE
   T_SIGNED
   T_RETURN
   T_CONST
   T_VOLATILE
   I_FLOAT
   I_CHAR
   T_SWITCH
   T_STRUCT
   T_CASE
   T_ENUM
   T_UNION
   T_UNSIGNED
   T_EXPONENT
   T_LEXCLAIM
   T_LSBRACKET
   T_RSBRACKET
   T_LOG
   T_EXP
   T_SQRT
   T_NUMBER
   T_COMMA
   T_COLON
   T_GO_TO
   T_CONTINUE
   T_BREAK
   T_LAND


Rules useless in grammar

   80 FUNC_DEC: T_INT T_VARIABLE T_LBRACKET PARAMETER_LIST T_RBRACKET T_LCBRACKET SCOPE T_RCBRACKET
   81         | T_VOID T_VARIABLE T_LBRACKET PARAMETER_LIST T_RBRACKET T_LCBRACKET SCOPE T_RCBRACKET

   82 PARAMETER_LIST: PARAMETER T_COMMA PARAMETER_LIST

   83 PARAMETER: T_INT T_VARIABLE

   84 RETURN_VALUE: T_VARIABLE T_LBRACKET PARAMETER_LIST T_RBRACKET

   85 EXPR11: EXPR11 T_LAND EXPR12
   86       | EXPR12


State 22 conflicts: 2 shift/reduce
State 58 conflicts: 2 shift/reduce
State 59 conflicts: 2 shift/reduce
State 60 conflicts: 2 shift/reduce
State 83 conflicts: 6 shift/reduce
State 145 conflicts: 1 shift/reduce
State 154 conflicts: 1 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: PROG_LIST

    2 PROG_LIST: PROG PROG_LIST
    3          | PROG

    4 PROG: FUNC_DEC
    5     | VAR_DEC

    6 FUNC_DEC: T_INT T_VARIABLE T_LBRACKET T_RBRACKET T_SEMI_COLON
    7         | T_VOID T_VARIABLE T_LBRACKET T_RBRACKET T_SEMI_COLON
    8         | T_INT T_VARIABLE T_LBRACKET T_RBRACKET T_LCBRACKET SCOPE T_RCBRACKET
    9         | T_VOID T_VARIABLE T_LBRACKET T_RBRACKET T_LCBRACKET SCOPE T_RCBRACKET
   10         | T_INT T_VARIABLE T_LBRACKET T_RBRACKET T_LCBRACKET T_RCBRACKET
   11         | T_VOID T_VARIABLE T_LBRACKET T_RBRACKET T_LCBRACKET T_RCBRACKET

   12 SCOPE: STATEMENT_LIST

   13 STATEMENT_LIST: STATEMENT T_SEMI_COLON STATEMENT_LIST
   14               | STATEMENT T_SEMI_COLON
   15               | STATEMENT STATEMENT_LIST
   16               | STATEMENT

   17 STATEMENT: RETURN_STATEMENT
   18          | IF_CONDITION_STATEMENT
   19          | IF_ELSE_CONDITION_STATEMENT
   20          | WHILE_CONDITION_STATEMENT
   21          | VAR_DEC_FUNCTION
   22          | ASSIGNMENT_STATEMENT
   23          | FOR_STATEMENT
   24          | DO_WHILE_STATEMENT

   25 VAR_DEC_FUNCTION: T_INT T_VARIABLE
   26                 | T_INT T_VARIABLE T_EQUAL EXPR

   27 VAR_DEC: T_INT T_VARIABLE T_SEMI_COLON
   28        | T_INT T_VARIABLE T_EQUAL EXPR T_SEMI_COLON

   29 ASSIGNMENT_STATEMENT: T_VARIABLE T_EQUAL EXPR
   30                     | T_VARIABLE T_PLUS T_PLUS
   31                     | T_PLUS T_PLUS T_VARIABLE
   32                     | T_VARIABLE T_MINUS T_MINUS
   33                     | T_MINUS T_MINUS T_VARIABLE
   34                     | T_VARIABLE T_PLUS T_EQUAL EXPR
   35                     | T_VARIABLE T_MINUS T_EQUAL EXPR
   36                     | T_VARIABLE T_TIMES T_EQUAL EXPR
   37                     | T_VARIABLE T_DIVIDE T_EQUAL EXPR
   38                     | T_VARIABLE T_REM T_EQUAL EXPR

   39 IF_CONDITION_STATEMENT: T_IF T_LBRACKET EXPR T_RBRACKET T_LCBRACKET STATEMENT_LIST T_RCBRACKET
   40                       | T_IF T_LBRACKET EXPR T_RBRACKET STATEMENT

   41 IF_ELSE_CONDITION_STATEMENT: T_IF T_LBRACKET EXPR T_RBRACKET T_LCBRACKET STATEMENT_LIST T_RCBRACKET T_ELSE T_LCBRACKET STATEMENT_LIST T_RCBRACKET
   42                            | T_IF T_LBRACKET EXPR T_RBRACKET STATEMENT T_ELSE STATEMENT

   43 WHILE_CONDITION_STATEMENT: T_WHILE T_LBRACKET EXPR T_RBRACKET T_LCBRACKET STATEMENT_LIST T_RCBRACKET

   44 FOR_STATEMENT: T_FOR T_LBRACKET VAR_DEC_FUNCTION T_SEMI_COLON EXPR T_SEMI_COLON ASSIGNMENT_STATEMENT T_RBRACKET T_LCBRACKET STATEMENT_LIST T_RCBRACKET

   45 DO_WHILE_STATEMENT: T_DO T_LCBRACKET STATEMENT_LIST T_RCBRACKET T_WHILE T_LBRACKET EXPR T_RBRACKET

   46 RETURN_STATEMENT: RETURN_VALUE

   47 RETURN_VALUE: T_VARIABLE T_LBRACKET T_RBRACKET
   48             | EXPR

   49 EXPR: T_NOT EXPR3
   50     | EXPR3

   51 EXPR3: EXPR3 T_DIVIDE EXPR4
   52      | EXPR3 T_TIMES EXPR4
   53      | EXPR3 T_REM EXPR4
   54      | EXPR4

   55 EXPR4: EXPR4 T_PLUS EXPR5
   56      | EXPR4 T_MINUS EXPR5
   57      | EXPR5

   58 EXPR5: EXPR5 T_LSHIFT EXPR6
   59      | EXPR5 T_RSHIFT EXPR6
   60      | EXPR6

   61 EXPR6: EXPR6 T_LE EXPR7
   62      | EXPR6 T_GE EXPR7
   63      | EXPR6 T_LT EXPR7
   64      | EXPR6 T_GT EXPR7
   65      | EXPR7

   66 EXPR7: EXPR7 T_EQ EXPR8
   67      | EXPR7 T_NEQ EXPR8
   68      | EXPR8

   69 EXPR8: EXPR8 T_AND EXPR9
   70      | EXPR9

   71 EXPR9: EXPR9 T_XOR EXPR10
   72      | EXPR10

   73 EXPR10: EXPR10 T_OR EXPR12
   74       | EXPR12

   75 EXPR12: EXPR12 T_LOR EXPR13
   76       | EXPR13

   77 EXPR13: T_LBRACKET EXPR T_RBRACKET
   78       | T_VARIABLE
   79       | I_INT


Terminals, with rules where they appear

$end (0) 0
error (256)
T_TYPEDEF (258)
T_EXTERN (259)
T_STATIC (260)
T_REGISTER (261)
T_AUTO (262)
T_INT <string> (263) 6 8 10 25 26 27 28
T_VOID <string> (264) 7 9 11
T_CHAR (265)
T_SHORT (266)
T_LONG (267)
T_FLOAT (268)
T_DOUBLE (269)
T_SIGNED (270)
T_RETURN (271)
T_CONST (272)
T_VOLATILE (273)
I_INT <number> (274) 79
I_FLOAT <Float> (275)
I_CHAR (276)
T_IF (277) 39 40 41 42
T_ELSE (278) 41 42
T_WHILE (279) 43 45
T_FOR (280) 44
T_REM (281) 38 53
T_DO (282) 45
T_SWITCH (283)
T_STRUCT (284)
T_CASE (285)
T_ENUM (286)
T_UNION (287)
T_UNSIGNED (288)
T_TIMES (289) 36 52
T_DIVIDE (290) 37 51
T_PLUS (291) 30 31 34 55
T_MINUS (292) 32 33 35 56
T_EXPONENT (293)
T_EQUAL (294) 26 28 29 34 35 36 37 38
T_LEXCLAIM (295)
T_LBRACKET (296) 6 7 8 9 10 11 39 40 41 42 43 44 45 47 77
T_RBRACKET (297) 6 7 8 9 10 11 39 40 41 42 43 44 45 47 77
T_LCBRACKET (298) 8 9 10 11 39 41 43 44 45
T_RCBRACKET (299) 8 9 10 11 39 41 43 44 45
T_LSBRACKET (300)
T_RSBRACKET (301)
T_LOG (302)
T_EXP (303)
T_SQRT (304)
T_LSHIFT (305) 58
T_RSHIFT (306) 59
T_NUMBER (307)
T_VARIABLE <string> (308) 6 7 8 9 10 11 25 26 27 28 29 30 31 32 33
    34 35 36 37 38 47 78
T_COMMA (309)
T_SEMI_COLON (310) 6 7 13 14 27 28 44
T_COLON (311)
T_GO_TO (312)
T_CONTINUE (313)
T_LE (314) 61
T_GE (315) 62
T_EQ (316) 66
T_NEQ (317) 67
T_LT (318) 63
T_GT (319) 64
T_BREAK (320)
T_LAND (321)
T_LOR (322) 75
T_AND (323) 69
T_OR (324) 73
T_XOR (325) 71
T_NOT (326) 49


Nonterminals, with rules where they appear

$accept (72)
    on left: 0
ROOT (73)
    on left: 1, on right: 0
PROG_LIST <expr> (74)
    on left: 2 3, on right: 1 2
PROG <expr> (75)
    on left: 4 5, on right: 2 3
FUNC_DEC <expr> (76)
    on left: 6 7 8 9 10 11, on right: 4
SCOPE <expr> (77)
    on left: 12, on right: 8 9
STATEMENT_LIST <expr> (78)
    on left: 13 14 15 16, on right: 12 13 15 39 41 43 44 45
STATEMENT <expr> (79)
    on left: 17 18 19 20 21 22 23 24, on right: 13 14 15 16 40 42
VAR_DEC_FUNCTION <expr> (80)
    on left: 25 26, on right: 21 44
VAR_DEC <expr> (81)
    on left: 27 28, on right: 5
ASSIGNMENT_STATEMENT <expr> (82)
    on left: 29 30 31 32 33 34 35 36 37 38, on right: 22 44
IF_CONDITION_STATEMENT <expr> (83)
    on left: 39 40, on right: 18
IF_ELSE_CONDITION_STATEMENT <expr> (84)
    on left: 41 42, on right: 19
WHILE_CONDITION_STATEMENT <expr> (85)
    on left: 43, on right: 20
FOR_STATEMENT <expr> (86)
    on left: 44, on right: 23
DO_WHILE_STATEMENT <expr> (87)
    on left: 45, on right: 24
RETURN_STATEMENT <expr> (88)
    on left: 46, on right: 17
RETURN_VALUE <expr> (89)
    on left: 47 48, on right: 46
EXPR <expr> (90)
    on left: 49 50, on right: 26 28 29 34 35 36 37 38 39 40 41 42 43
    44 45 48 77
EXPR3 <expr> (91)
    on left: 51 52 53 54, on right: 49 50 51 52 53
EXPR4 <expr> (92)
    on left: 55 56 57, on right: 51 52 53 54 55 56
EXPR5 <expr> (93)
    on left: 58 59 60, on right: 55 56 57 58 59
EXPR6 <expr> (94)
    on left: 61 62 63 64 65, on right: 58 59 60 61 62 63 64
EXPR7 <expr> (95)
    on left: 66 67 68, on right: 61 62 63 64 65 66 67
EXPR8 <expr> (96)
    on left: 69 70, on right: 66 67 68 69
EXPR9 <expr> (97)
    on left: 71 72, on right: 69 70 71
EXPR10 <expr> (98)
    on left: 73 74, on right: 71 72 73
EXPR12 <expr> (99)
    on left: 75 76, on right: 73 74 75
EXPR13 <expr> (100)
    on left: 77 78 79, on right: 75 76


State 0

    0 $accept: . ROOT $end

    T_INT   shift, and go to state 1
    T_VOID  shift, and go to state 2

    ROOT       go to state 3
    PROG_LIST  go to state 4
    PROG       go to state 5
    FUNC_DEC   go to state 6
    VAR_DEC    go to state 7


State 1

    6 FUNC_DEC: T_INT . T_VARIABLE T_LBRACKET T_RBRACKET T_SEMI_COLON
    8         | T_INT . T_VARIABLE T_LBRACKET T_RBRACKET T_LCBRACKET SCOPE T_RCBRACKET
   10         | T_INT . T_VARIABLE T_LBRACKET T_RBRACKET T_LCBRACKET T_RCBRACKET
   27 VAR_DEC: T_INT . T_VARIABLE T_SEMI_COLON
   28        | T_INT . T_VARIABLE T_EQUAL EXPR T_SEMI_COLON

    T_VARIABLE  shift, and go to state 8


State 2

    7 FUNC_DEC: T_VOID . T_VARIABLE T_LBRACKET T_RBRACKET T_SEMI_COLON
    9         | T_VOID . T_VARIABLE T_LBRACKET T_RBRACKET T_LCBRACKET SCOPE T_RCBRACKET
   11         | T_VOID . T_VARIABLE T_LBRACKET T_RBRACKET T_LCBRACKET T_RCBRACKET

    T_VARIABLE  shift, and go to state 9


State 3

    0 $accept: ROOT . $end

    $end  shift, and go to state 10


State 4

    1 ROOT: PROG_LIST .

    $default  reduce using rule 1 (ROOT)


State 5

    2 PROG_LIST: PROG . PROG_LIST
    3          | PROG .

    T_INT   shift, and go to state 1
    T_VOID  shift, and go to state 2

    $default  reduce using rule 3 (PROG_LIST)

    PROG_LIST  go to state 11
    PROG       go to state 5
    FUNC_DEC   go to state 6
    VAR_DEC    go to state 7


State 6

    4 PROG: FUNC_DEC .

    $default  reduce using rule 4 (PROG)


State 7

    5 PROG: VAR_DEC .

    $default  reduce using rule 5 (PROG)


State 8

    6 FUNC_DEC: T_INT T_VARIABLE . T_LBRACKET T_RBRACKET T_SEMI_COLON
    8         | T_INT T_VARIABLE . T_LBRACKET T_RBRACKET T_LCBRACKET SCOPE T_RCBRACKET
   10         | T_INT T_VARIABLE . T_LBRACKET T_RBRACKET T_LCBRACKET T_RCBRACKET
   27 VAR_DEC: T_INT T_VARIABLE . T_SEMI_COLON
   28        | T_INT T_VARIABLE . T_EQUAL EXPR T_SEMI_COLON

    T_EQUAL       shift, and go to state 12
    T_LBRACKET    shift, and go to state 13
    T_SEMI_COLON  shift, and go to state 14


State 9

    7 FUNC_DEC: T_VOID T_VARIABLE . T_LBRACKET T_RBRACKET T_SEMI_COLON
    9         | T_VOID T_VARIABLE . T_LBRACKET T_RBRACKET T_LCBRACKET SCOPE T_RCBRACKET
   11         | T_VOID T_VARIABLE . T_LBRACKET T_RBRACKET T_LCBRACKET T_RCBRACKET

    T_LBRACKET  shift, and go to state 15


State 10

    0 $accept: ROOT $end .

    $default  accept


State 11

    2 PROG_LIST: PROG PROG_LIST .

    $default  reduce using rule 2 (PROG_LIST)


State 12

   28 VAR_DEC: T_INT T_VARIABLE T_EQUAL . EXPR T_SEMI_COLON

    I_INT       shift, and go to state 16
    T_LBRACKET  shift, and go to state 17
    T_VARIABLE  shift, and go to state 18
    T_NOT       shift, and go to state 19

    EXPR    go to state 20
    EXPR3   go to state 21
    EXPR4   go to state 22
    EXPR5   go to state 23
    EXPR6   go to state 24
    EXPR7   go to state 25
    EXPR8   go to state 26
    EXPR9   go to state 27
    EXPR10  go to state 28
    EXPR12  go to state 29
    EXPR13  go to state 30


State 13

    6 FUNC_DEC: T_INT T_VARIABLE T_LBRACKET . T_RBRACKET T_SEMI_COLON
    8         | T_INT T_VARIABLE T_LBRACKET . T_RBRACKET T_LCBRACKET SCOPE T_RCBRACKET
   10         | T_INT T_VARIABLE T_LBRACKET . T_RBRACKET T_LCBRACKET T_RCBRACKET

    T_RBRACKET  shift, and go to state 31


State 14

   27 VAR_DEC: T_INT T_VARIABLE T_SEMI_COLON .

    $default  reduce using rule 27 (VAR_DEC)


State 15

    7 FUNC_DEC: T_VOID T_VARIABLE T_LBRACKET . T_RBRACKET T_SEMI_COLON
    9         | T_VOID T_VARIABLE T_LBRACKET . T_RBRACKET T_LCBRACKET SCOPE T_RCBRACKET
   11         | T_VOID T_VARIABLE T_LBRACKET . T_RBRACKET T_LCBRACKET T_RCBRACKET

    T_RBRACKET  shift, and go to state 32


State 16

   79 EXPR13: I_INT .

    $default  reduce using rule 79 (EXPR13)


State 17

   77 EXPR13: T_LBRACKET . EXPR T_RBRACKET

    I_INT       shift, and go to state 16
    T_LBRACKET  shift, and go to state 17
    T_VARIABLE  shift, and go to state 18
    T_NOT       shift, and go to state 19

    EXPR    go to state 33
    EXPR3   go to state 21
    EXPR4   go to state 22
    EXPR5   go to state 23
    EXPR6   go to state 24
    EXPR7   go to state 25
    EXPR8   go to state 26
    EXPR9   go to state 27
    EXPR10  go to state 28
    EXPR12  go to state 29
    EXPR13  go to state 30


State 18

   78 EXPR13: T_VARIABLE .

    $default  reduce using rule 78 (EXPR13)


State 19

   49 EXPR: T_NOT . EXPR3

    I_INT       shift, and go to state 16
    T_LBRACKET  shift, and go to state 17
    T_VARIABLE  shift, and go to state 18

    EXPR3   go to state 34
    EXPR4   go to state 22
    EXPR5   go to state 23
    EXPR6   go to state 24
    EXPR7   go to state 25
    EXPR8   go to state 26
    EXPR9   go to state 27
    EXPR10  go to state 28
    EXPR12  go to state 29
    EXPR13  go to state 30


State 20

   28 VAR_DEC: T_INT T_VARIABLE T_EQUAL EXPR . T_SEMI_COLON

    T_SEMI_COLON  shift, and go to state 35


State 21

   50 EXPR: EXPR3 .
   51 EXPR3: EXPR3 . T_DIVIDE EXPR4
   52      | EXPR3 . T_TIMES EXPR4
   53      | EXPR3 . T_REM EXPR4

    T_REM     shift, and go to state 36
    T_TIMES   shift, and go to state 37
    T_DIVIDE  shift, and go to state 38

    $default  reduce using rule 50 (EXPR)


State 22

   54 EXPR3: EXPR4 .
   55 EXPR4: EXPR4 . T_PLUS EXPR5
   56      | EXPR4 . T_MINUS EXPR5

    T_PLUS   shift, and go to state 39
    T_MINUS  shift, and go to state 40

    T_PLUS    [reduce using rule 54 (EXPR3)]
    T_MINUS   [reduce using rule 54 (EXPR3)]
    $default  reduce using rule 54 (EXPR3)


State 23

   57 EXPR4: EXPR5 .
   58 EXPR5: EXPR5 . T_LSHIFT EXPR6
   59      | EXPR5 . T_RSHIFT EXPR6

    T_LSHIFT  shift, and go to state 41
    T_RSHIFT  shift, and go to state 42

    $default  reduce using rule 57 (EXPR4)


State 24

   60 EXPR5: EXPR6 .
   61 EXPR6: EXPR6 . T_LE EXPR7
   62      | EXPR6 . T_GE EXPR7
   63      | EXPR6 . T_LT EXPR7
   64      | EXPR6 . T_GT EXPR7

    T_LE  shift, and go to state 43
    T_GE  shift, and go to state 44
    T_LT  shift, and go to state 45
    T_GT  shift, and go to state 46

    $default  reduce using rule 60 (EXPR5)


State 25

   65 EXPR6: EXPR7 .
   66 EXPR7: EXPR7 . T_EQ EXPR8
   67      | EXPR7 . T_NEQ EXPR8

    T_EQ   shift, and go to state 47
    T_NEQ  shift, and go to state 48

    $default  reduce using rule 65 (EXPR6)


State 26

   68 EXPR7: EXPR8 .
   69 EXPR8: EXPR8 . T_AND EXPR9

    T_AND  shift, and go to state 49

    $default  reduce using rule 68 (EXPR7)


State 27

   70 EXPR8: EXPR9 .
   71 EXPR9: EXPR9 . T_XOR EXPR10

    T_XOR  shift, and go to state 50

    $default  reduce using rule 70 (EXPR8)


State 28

   72 EXPR9: EXPR10 .
   73 EXPR10: EXPR10 . T_OR EXPR12

    T_OR  shift, and go to state 51

    $default  reduce using rule 72 (EXPR9)


State 29

   74 EXPR10: EXPR12 .
   75 EXPR12: EXPR12 . T_LOR EXPR13

    T_LOR  shift, and go to state 52

    $default  reduce using rule 74 (EXPR10)


State 30

   76 EXPR12: EXPR13 .

    $default  reduce using rule 76 (EXPR12)


State 31

    6 FUNC_DEC: T_INT T_VARIABLE T_LBRACKET T_RBRACKET . T_SEMI_COLON
    8         | T_INT T_VARIABLE T_LBRACKET T_RBRACKET . T_LCBRACKET SCOPE T_RCBRACKET
   10         | T_INT T_VARIABLE T_LBRACKET T_RBRACKET . T_LCBRACKET T_RCBRACKET

    T_LCBRACKET   shift, and go to state 53
    T_SEMI_COLON  shift, and go to state 54


State 32

    7 FUNC_DEC: T_VOID T_VARIABLE T_LBRACKET T_RBRACKET . T_SEMI_COLON
    9         | T_VOID T_VARIABLE T_LBRACKET T_RBRACKET . T_LCBRACKET SCOPE T_RCBRACKET
   11         | T_VOID T_VARIABLE T_LBRACKET T_RBRACKET . T_LCBRACKET T_RCBRACKET

    T_LCBRACKET   shift, and go to state 55
    T_SEMI_COLON  shift, and go to state 56


State 33

   77 EXPR13: T_LBRACKET EXPR . T_RBRACKET

    T_RBRACKET  shift, and go to state 57


State 34

   49 EXPR: T_NOT EXPR3 .
   51 EXPR3: EXPR3 . T_DIVIDE EXPR4
   52      | EXPR3 . T_TIMES EXPR4
   53      | EXPR3 . T_REM EXPR4

    T_REM     shift, and go to state 36
    T_TIMES   shift, and go to state 37
    T_DIVIDE  shift, and go to state 38

    $default  reduce using rule 49 (EXPR)


State 35

   28 VAR_DEC: T_INT T_VARIABLE T_EQUAL EXPR T_SEMI_COLON .

    $default  reduce using rule 28 (VAR_DEC)


State 36

   53 EXPR3: EXPR3 T_REM . EXPR4

    I_INT       shift, and go to state 16
    T_LBRACKET  shift, and go to state 17
    T_VARIABLE  shift, and go to state 18

    EXPR4   go to state 58
    EXPR5   go to state 23
    EXPR6   go to state 24
    EXPR7   go to state 25
    EXPR8   go to state 26
    EXPR9   go to state 27
    EXPR10  go to state 28
    EXPR12  go to state 29
    EXPR13  go to state 30


State 37

   52 EXPR3: EXPR3 T_TIMES . EXPR4

    I_INT       shift, and go to state 16
    T_LBRACKET  shift, and go to state 17
    T_VARIABLE  shift, and go to state 18

    EXPR4   go to state 59
    EXPR5   go to state 23
    EXPR6   go to state 24
    EXPR7   go to state 25
    EXPR8   go to state 26
    EXPR9   go to state 27
    EXPR10  go to state 28
    EXPR12  go to state 29
    EXPR13  go to state 30


State 38

   51 EXPR3: EXPR3 T_DIVIDE . EXPR4

    I_INT       shift, and go to state 16
    T_LBRACKET  shift, and go to state 17
    T_VARIABLE  shift, and go to state 18

    EXPR4   go to state 60
    EXPR5   go to state 23
    EXPR6   go to state 24
    EXPR7   go to state 25
    EXPR8   go to state 26
    EXPR9   go to state 27
    EXPR10  go to state 28
    EXPR12  go to state 29
    EXPR13  go to state 30


State 39

   55 EXPR4: EXPR4 T_PLUS . EXPR5

    I_INT       shift, and go to state 16
    T_LBRACKET  shift, and go to state 17
    T_VARIABLE  shift, and go to state 18

    EXPR5   go to state 61
    EXPR6   go to state 24
    EXPR7   go to state 25
    EXPR8   go to state 26
    EXPR9   go to state 27
    EXPR10  go to state 28
    EXPR12  go to state 29
    EXPR13  go to state 30


State 40

   56 EXPR4: EXPR4 T_MINUS . EXPR5

    I_INT       shift, and go to state 16
    T_LBRACKET  shift, and go to state 17
    T_VARIABLE  shift, and go to state 18

    EXPR5   go to state 62
    EXPR6   go to state 24
    EXPR7   go to state 25
    EXPR8   go to state 26
    EXPR9   go to state 27
    EXPR10  go to state 28
    EXPR12  go to state 29
    EXPR13  go to state 30


State 41

   58 EXPR5: EXPR5 T_LSHIFT . EXPR6

    I_INT       shift, and go to state 16
    T_LBRACKET  shift, and go to state 17
    T_VARIABLE  shift, and go to state 18

    EXPR6   go to state 63
    EXPR7   go to state 25
    EXPR8   go to state 26
    EXPR9   go to state 27
    EXPR10  go to state 28
    EXPR12  go to state 29
    EXPR13  go to state 30


State 42

   59 EXPR5: EXPR5 T_RSHIFT . EXPR6

    I_INT       shift, and go to state 16
    T_LBRACKET  shift, and go to state 17
    T_VARIABLE  shift, and go to state 18

    EXPR6   go to state 64
    EXPR7   go to state 25
    EXPR8   go to state 26
    EXPR9   go to state 27
    EXPR10  go to state 28
    EXPR12  go to state 29
    EXPR13  go to state 30


State 43

   61 EXPR6: EXPR6 T_LE . EXPR7

    I_INT       shift, and go to state 16
    T_LBRACKET  shift, and go to state 17
    T_VARIABLE  shift, and go to state 18

    EXPR7   go to state 65
    EXPR8   go to state 26
    EXPR9   go to state 27
    EXPR10  go to state 28
    EXPR12  go to state 29
    EXPR13  go to state 30


State 44

   62 EXPR6: EXPR6 T_GE . EXPR7

    I_INT       shift, and go to state 16
    T_LBRACKET  shift, and go to state 17
    T_VARIABLE  shift, and go to state 18

    EXPR7   go to state 66
    EXPR8   go to state 26
    EXPR9   go to state 27
    EXPR10  go to state 28
    EXPR12  go to state 29
    EXPR13  go to state 30


State 45

   63 EXPR6: EXPR6 T_LT . EXPR7

    I_INT       shift, and go to state 16
    T_LBRACKET  shift, and go to state 17
    T_VARIABLE  shift, and go to state 18

    EXPR7   go to state 67
    EXPR8   go to state 26
    EXPR9   go to state 27
    EXPR10  go to state 28
    EXPR12  go to state 29
    EXPR13  go to state 30


State 46

   64 EXPR6: EXPR6 T_GT . EXPR7

    I_INT       shift, and go to state 16
    T_LBRACKET  shift, and go to state 17
    T_VARIABLE  shift, and go to state 18

    EXPR7   go to state 68
    EXPR8   go to state 26
    EXPR9   go to state 27
    EXPR10  go to state 28
    EXPR12  go to state 29
    EXPR13  go to state 30


State 47

   66 EXPR7: EXPR7 T_EQ . EXPR8

    I_INT       shift, and go to state 16
    T_LBRACKET  shift, and go to state 17
    T_VARIABLE  shift, and go to state 18

    EXPR8   go to state 69
    EXPR9   go to state 27
    EXPR10  go to state 28
    EXPR12  go to state 29
    EXPR13  go to state 30


State 48

   67 EXPR7: EXPR7 T_NEQ . EXPR8

    I_INT       shift, and go to state 16
    T_LBRACKET  shift, and go to state 17
    T_VARIABLE  shift, and go to state 18

    EXPR8   go to state 70
    EXPR9   go to state 27
    EXPR10  go to state 28
    EXPR12  go to state 29
    EXPR13  go to state 30


State 49

   69 EXPR8: EXPR8 T_AND . EXPR9

    I_INT       shift, and go to state 16
    T_LBRACKET  shift, and go to state 17
    T_VARIABLE  shift, and go to state 18

    EXPR9   go to state 71
    EXPR10  go to state 28
    EXPR12  go to state 29
    EXPR13  go to state 30


State 50

   71 EXPR9: EXPR9 T_XOR . EXPR10

    I_INT       shift, and go to state 16
    T_LBRACKET  shift, and go to state 17
    T_VARIABLE  shift, and go to state 18

    EXPR10  go to state 72
    EXPR12  go to state 29
    EXPR13  go to state 30


State 51

   73 EXPR10: EXPR10 T_OR . EXPR12

    I_INT       shift, and go to state 16
    T_LBRACKET  shift, and go to state 17
    T_VARIABLE  shift, and go to state 18

    EXPR12  go to state 73
    EXPR13  go to state 30


State 52

   75 EXPR12: EXPR12 T_LOR . EXPR13

    I_INT       shift, and go to state 16
    T_LBRACKET  shift, and go to state 17
    T_VARIABLE  shift, and go to state 18

    EXPR13  go to state 74


State 53

    8 FUNC_DEC: T_INT T_VARIABLE T_LBRACKET T_RBRACKET T_LCBRACKET . SCOPE T_RCBRACKET
   10         | T_INT T_VARIABLE T_LBRACKET T_RBRACKET T_LCBRACKET . T_RCBRACKET

    T_INT        shift, and go to state 75
    I_INT        shift, and go to state 16
    T_IF         shift, and go to state 76
    T_WHILE      shift, and go to state 77
    T_FOR        shift, and go to state 78
    T_DO         shift, and go to state 79
    T_PLUS       shift, and go to state 80
    T_MINUS      shift, and go to state 81
    T_LBRACKET   shift, and go to state 17
    T_RCBRACKET  shift, and go to state 82
    T_VARIABLE   shift, and go to state 83
    T_NOT        shift, and go to state 19

    SCOPE                        go to state 84
    STATEMENT_LIST               go to state 85
    STATEMENT                    go to state 86
    VAR_DEC_FUNCTION             go to state 87
    ASSIGNMENT_STATEMENT         go to state 88
    IF_CONDITION_STATEMENT       go to state 89
    IF_ELSE_CONDITION_STATEMENT  go to state 90
    WHILE_CONDITION_STATEMENT    go to state 91
    FOR_STATEMENT                go to state 92
    DO_WHILE_STATEMENT           go to state 93
    RETURN_STATEMENT             go to state 94
    RETURN_VALUE                 go to state 95
    EXPR                         go to state 96
    EXPR3                        go to state 21
    EXPR4                        go to state 22
    EXPR5                        go to state 23
    EXPR6                        go to state 24
    EXPR7                        go to state 25
    EXPR8                        go to state 26
    EXPR9                        go to state 27
    EXPR10                       go to state 28
    EXPR12                       go to state 29
    EXPR13                       go to state 30


State 54

    6 FUNC_DEC: T_INT T_VARIABLE T_LBRACKET T_RBRACKET T_SEMI_COLON .

    $default  reduce using rule 6 (FUNC_DEC)


State 55

    9 FUNC_DEC: T_VOID T_VARIABLE T_LBRACKET T_RBRACKET T_LCBRACKET . SCOPE T_RCBRACKET
   11         | T_VOID T_VARIABLE T_LBRACKET T_RBRACKET T_LCBRACKET . T_RCBRACKET

    T_INT        shift, and go to state 75
    I_INT        shift, and go to state 16
    T_IF         shift, and go to state 76
    T_WHILE      shift, and go to state 77
    T_FOR        shift, and go to state 78
    T_DO         shift, and go to state 79
    T_PLUS       shift, and go to state 80
    T_MINUS      shift, and go to state 81
    T_LBRACKET   shift, and go to state 17
    T_RCBRACKET  shift, and go to state 97
    T_VARIABLE   shift, and go to state 83
    T_NOT        shift, and go to state 19

    SCOPE                        go to state 98
    STATEMENT_LIST               go to state 85
    STATEMENT                    go to state 86
    VAR_DEC_FUNCTION             go to state 87
    ASSIGNMENT_STATEMENT         go to state 88
    IF_CONDITION_STATEMENT       go to state 89
    IF_ELSE_CONDITION_STATEMENT  go to state 90
    WHILE_CONDITION_STATEMENT    go to state 91
    FOR_STATEMENT                go to state 92
    DO_WHILE_STATEMENT           go to state 93
    RETURN_STATEMENT             go to state 94
    RETURN_VALUE                 go to state 95
    EXPR                         go to state 96
    EXPR3                        go to state 21
    EXPR4                        go to state 22
    EXPR5                        go to state 23
    EXPR6                        go to state 24
    EXPR7                        go to state 25
    EXPR8                        go to state 26
    EXPR9                        go to state 27
    EXPR10                       go to state 28
    EXPR12                       go to state 29
    EXPR13                       go to state 30


State 56

    7 FUNC_DEC: T_VOID T_VARIABLE T_LBRACKET T_RBRACKET T_SEMI_COLON .

    $default  reduce using rule 7 (FUNC_DEC)


State 57

   77 EXPR13: T_LBRACKET EXPR T_RBRACKET .

    $default  reduce using rule 77 (EXPR13)


State 58

   53 EXPR3: EXPR3 T_REM EXPR4 .
   55 EXPR4: EXPR4 . T_PLUS EXPR5
   56      | EXPR4 . T_MINUS EXPR5

    T_PLUS   shift, and go to state 39
    T_MINUS  shift, and go to state 40

    T_PLUS    [reduce using rule 53 (EXPR3)]
    T_MINUS   [reduce using rule 53 (EXPR3)]
    $default  reduce using rule 53 (EXPR3)


State 59

   52 EXPR3: EXPR3 T_TIMES EXPR4 .
   55 EXPR4: EXPR4 . T_PLUS EXPR5
   56      | EXPR4 . T_MINUS EXPR5
